# wgsl-minifier

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: hardcoded.rs
