[package]
name = "wgsl-minifier"
version = "0.8.0"
edition = "2024"
license = "MIT"

description = "A command-line tool for minifying WGSL shaders."
homepage = "https://github.com/LucentFlux/wgsl-minifier"
repository = "https://github.com/LucentFlux/wgsl-minifier"

readme = "README.md"
keywords = ["gamedev", "graphics", "wgsl", "wgpu", "shader"]
categories = ["development-tools::build-utils", "game-development", "graphics"]
include = ["/Cargo.toml", "/LICENSE", "/README.md", "/src/**"]

[dependencies]
naga = { version = "28.0", features = ["wgsl-in", "wgsl-out"] }
unicode-ident = "1.0"

# Used for main
clap = { version = "4.5", features = ["cargo"], optional = true }
codespan-reporting = { version = "0.13", optional = true }

[features]
bin = ["clap", "codespan-reporting"]

[[bin]]
name = "wgsl-minifier"
required-features = ["bin"]

[dev-dependencies]
pretty_assertions = "1.4"
